# ring-gemma4-depression-poc

./: .env.example  .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  requirements.txt  tsconfig.json
apps/: pipeline_main.cpp  train_main.cpp  vector_db_main.cpp
config/: inverse_confusion_sleep.txt  lora_config.txt
data/: allofus.csv  globem.csv  lifesnaps.csv  pmdata.csv  tiles.csv  unified_epoch_lake.csv
include/cogstate/: aim.hpp  csv.hpp  data_fusion.hpp  embedding.hpp  fusion.hpp  gemma4.hpp  math_harmonization.hpp  types.hpp  vector_db.hpp
models/: state_vectors.db  training_artifact.txt
notebooks/: demo.ipynb
results/: evaluation_report.md
scripts/: query_vector_db.sh  run_pipeline.sh  train_model.sh
src/: aim.cpp  csv.cpp  data_fusion.cpp  dataset.py  embedding.cpp  encoder.py  evaluate.py  fusion.cpp  gemma4.cpp  math_harmonization.cpp  model.py  preprocessing.py  projector.py  train.py  vector_db.cpp
supabase/migrations/: 20260404173000_vector2_core.sql
ts/: config.ts  types.ts
ts/aim/: aim.ts
ts/cli/: pipeline.ts  search.ts  train.ts
ts/embeddings/: hierarchy.ts
ts/fusion/: patch-encoder.ts
ts/gemma/: gemma4.ts
ts/math/: harmonization.ts
ts/pipeline/: data-fusion.ts
ts/supabase/: client.ts  repository.ts
ts/utils/: stats.ts
ts/vector-db/: vector-db.ts
